// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods .all() should return a list of all methods 1`] = `
Array [
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/ideal",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/ideal",
          "type": "application/hal+json",
        },
      },
      "description": "iDEAL",
      "id": "ideal",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
      },
      "resource": "method",
    },
    "description": "iDEAL",
    "id": "ideal",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
    },
    "resource": "method",
  },
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/creditcard",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/creditcard",
          "type": "application/hal+json",
        },
      },
      "description": "Credit card",
      "id": "creditcard",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/creditcard.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/creditcard%402x.png",
      },
      "resource": "method",
    },
    "description": "Credit card",
    "id": "creditcard",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/creditcard.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/creditcard%402x.png",
    },
    "resource": "method",
  },
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/banktransfer",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/banktransfer",
          "type": "application/hal+json",
        },
      },
      "description": "Bank transfer",
      "id": "banktransfer",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/banktransfer.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/banktransfer%402x.png",
      },
      "resource": "method",
    },
    "description": "Bank transfer",
    "id": "banktransfer",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/banktransfer.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/banktransfer%402x.png",
    },
    "resource": "method",
  },
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/bitcoin",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/bitcoin",
          "type": "application/hal+json",
        },
      },
      "description": "Bitcoin",
      "id": "bitcoin",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/bitcoin.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/bitcoin%402x.png",
      },
      "resource": "method",
    },
    "description": "Bitcoin",
    "id": "bitcoin",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/bitcoin.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/bitcoin%402x.png",
    },
    "resource": "method",
  },
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/inghomepay",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/inghomepay",
          "type": "application/hal+json",
        },
      },
      "description": "ING Home'Pay",
      "id": "inghomepay",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/inghomepay.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/inghomepay%402x.png",
      },
      "resource": "method",
    },
    "description": "ING Home'Pay",
    "id": "inghomepay",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/inghomepay.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/inghomepay%402x.png",
    },
    "resource": "method",
  },
]
`;

exports[`methods .all() should work with a callback 1`] = `
Array [
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/ideal",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/ideal",
          "type": "application/hal+json",
        },
      },
      "description": "iDEAL",
      "id": "ideal",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
      },
      "resource": "method",
    },
    "description": "iDEAL",
    "id": "ideal",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
    },
    "resource": "method",
  },
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/creditcard",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/creditcard",
          "type": "application/hal+json",
        },
      },
      "description": "Credit card",
      "id": "creditcard",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/creditcard.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/creditcard%402x.png",
      },
      "resource": "method",
    },
    "description": "Credit card",
    "id": "creditcard",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/creditcard.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/creditcard%402x.png",
    },
    "resource": "method",
  },
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/banktransfer",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/banktransfer",
          "type": "application/hal+json",
        },
      },
      "description": "Bank transfer",
      "id": "banktransfer",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/banktransfer.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/banktransfer%402x.png",
      },
      "resource": "method",
    },
    "description": "Bank transfer",
    "id": "banktransfer",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/banktransfer.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/banktransfer%402x.png",
    },
    "resource": "method",
  },
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/bitcoin",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/bitcoin",
          "type": "application/hal+json",
        },
      },
      "description": "Bitcoin",
      "id": "bitcoin",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/bitcoin.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/bitcoin%402x.png",
      },
      "resource": "method",
    },
    "description": "Bitcoin",
    "id": "bitcoin",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/bitcoin.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/bitcoin%402x.png",
    },
    "resource": "method",
  },
  Method {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/inghomepay",
        "type": "application/hal+json",
      },
    },
    "data": Object {
      "_links": Object {
        "self": Object {
          "href": "https://api.mollie.com/v2/methods/inghomepay",
          "type": "application/hal+json",
        },
      },
      "description": "ING Home'Pay",
      "id": "inghomepay",
      "image": Object {
        "size1x": "https://www.mollie.com/images/payscreen/methods/inghomepay.png",
        "size2x": "https://www.mollie.com/images/payscreen/methods/inghomepay%402x.png",
      },
      "resource": "method",
    },
    "description": "ING Home'Pay",
    "id": "inghomepay",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/inghomepay.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/inghomepay%402x.png",
    },
    "resource": "method",
  },
]
`;

exports[`methods .get() should return a method instance 1`] = `
Method {
  "_links": Object {
    "documentation": null,
    "self": null,
  },
  "config": Object {
    "data": undefined,
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
    },
    "maxContentLength": -1,
    "method": "get",
    "params": undefined,
    "timeout": 0,
    "transformRequest": Object {
      "0": [Function],
    },
    "transformResponse": Object {
      "0": [Function],
    },
    "url": "methods/ideal",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Object {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/ideal",
        "type": "application/hal+json",
      },
    },
    "description": "iDEAL",
    "id": "ideal",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
    },
    "resource": "method",
  },
  "description": null,
  "headers": undefined,
  "id": null,
  "image": Object {
    "size1x": null,
    "size2x": null,
    "svg": null,
  },
  "resource": "method",
  "status": 200,
}
`;

exports[`methods .get() should work with a callback 1`] = `
Method {
  "_links": Object {
    "documentation": null,
    "self": null,
  },
  "config": Object {
    "data": undefined,
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
    },
    "maxContentLength": -1,
    "method": "get",
    "params": [Function],
    "timeout": 0,
    "transformRequest": Object {
      "0": [Function],
    },
    "transformResponse": Object {
      "0": [Function],
    },
    "url": "methods/ideal",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Object {
    "_links": Object {
      "self": Object {
        "href": "https://api.mollie.com/v2/methods/ideal",
        "type": "application/hal+json",
      },
    },
    "description": "iDEAL",
    "id": "ideal",
    "image": Object {
      "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
    },
    "resource": "method",
  },
  "description": null,
  "headers": undefined,
  "id": null,
  "image": Object {
    "size1x": null,
    "size2x": null,
    "svg": null,
  },
  "resource": "method",
  "status": 200,
}
`;
